# proving-utils

./: Cargo.toml  rustfmt.toml
.github/workflows/: check.yml  main_pr_ci_flow.yaml  upload_artifacts_workflow.yml
crates/cairo-compile-utils/: Cargo.toml
crates/cairo-compile-utils/src/: lib.rs
crates/cairo-program-runner/: Cargo.toml
crates/cairo-program-runner-exe/: Cargo.toml
crates/cairo-program-runner-lib/: Cargo.toml
crates/cairo-program-runner-lib/examples/: run_program.rs
crates/cairo-program-runner-lib/resources/compiled_programs/bootloaders/: applicative_bootloader_compiled.json  bootloader_compiled.json
crates/cairo-program-runner-lib/resources/compiled_programs/test_programs/: builtin_usage_all_cairo_compiled.json  builtin_usage_compiled.json  builtin_usage_flexible_cairo_compiled.json  concat_aggregator_compiled.json  fibonacci_compiled.json  mock_cairo_verifier_compiled.json  pedersen_merkle_compiled.json
crates/cairo-program-runner-lib/scripts/: benchmark_run_and_prove.rs  benchmark_runner.rs  prover_params.json  run_all_pies.sh  run_and_prove_all_pies.sh
crates/cairo-program-runner-lib/src/: lib.rs  tasks.rs  test_utils.rs  utils.rs
crates/cairo-program-runner-lib/src/hints/: applicative_bootloader_hints.rs  bootloader_hints.rs  builtin_usage_hints.rs  codes.rs  concat_aggregator_hints.rs  execute_task_hints.rs  fact_topologies.rs  fibonacci_hints.rs  fri_layer.rs  hint_processors.rs  inner_select_builtins.rs  load_cairo_pie.rs  mod.rs  pedersen_merkle_hints.rs  program_hash.rs  program_loader.rs  select_builtins.rs  sha256_hints.rs  simple_bootloader_hints.rs  simple_output_hints.rs  types.rs  utils.rs  vars.rs  vector_commitment.rs  verifier_utils.rs
crates/cairo-program-runner/examples/: run_program.rs
crates/cairo-program-runner/resources/compiled_programs/test_programs/: simple_output_compiled.json
crates/cairo-program-runner/src/: utils.rs
crates/cairo-program-runner/src/hints/: applicative_bootloader_hints.rs  codes.rs  execute_task_hints.rs  hint_processors.rs  mod.rs  program_hash.rs  simple_bootloader_hints.rs  types.rs  utils.rs  vars.rs  verifier_utils.rs
crates/concat-aggregator/: Cargo.toml
crates/concat-aggregator/src/: aggregator_tasks_utils.cairo  concat_aggregator.cairo  main.rs
crates/run_and_prove/: Cargo.toml
crates/run_and_prove/src/: main.rs
crates/sharper-poc/: Cargo.toml  Dockerfile
crates/sharper-poc/kubernetes/: deployment.yaml  service.yaml
crates/sharper-poc/src/: main.rs  utils.rs
crates/stwo_run_and_prove/: Cargo.toml
crates/stwo_run_and_prove/resources/: array_sum.json  array_sum_proof  prover_params.json
crates/stwo_run_and_prove/src/: main.rs
crates/vm_runner/: Cargo.toml
crates/vm_runner/src/: main.rs
examples/: run_program.rs
resources/: simple_bootloader-latest.json
resources/compiled_programs/bootloaders/: applicative_bootloader_compiled.json  bootloader_compiled.json  simple_bootloader_compiled.json
resources/compiled_programs/test_programs/: mock_cairo_verifier_compiled.json  simple_output_compiled.json
src/: bootloaders.rs  lib.rs  tasks.rs  utils.rs
src/hints/: applicative_bootloader_hints.rs  bootloader_hints.rs  cairo_structs.rs  codes.rs  execute_task_hints.rs  fact_topologies.rs  fri_layer.rs  hint_processors.rs  inner_select_builtins.rs  load_cairo_pie.rs  mock_cairo_verifier_hints.rs  mod.rs  program_hash.rs  program_loader.rs  select_builtins.rs  simple_bootloader_hints.rs  types.rs  utils.rs  vars.rs  verifier_hints.rs  verifier_utils.rs
vm_runner/: Cargo.toml
