[workspace]
members = [
    "crates/cairo-program-runner",
    "crates/cairo-program-runner-lib",
    "crates/stwo_run_and_prove",
    "crates/vm_runner",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = [
    "serde",
] }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "25c2f8a3de6b0495ea9136293a9f8d4cd16f85cb" }
cairo-lang-executable = "=2.12.4-dev.1"
cairo-lang-runner = "=2.12.4-dev.1"
cairo-lang-casm = "=2.12.4-dev.1"
cairo-lang-execute-utils = "=2.12.4-dev.1"
cairo-program-runner-lib = { path = "crates/cairo-program-runner-lib" }
cairo-vm = { version = "=3.0.0-rc.3", features = ["extensive_hints", "mod_builtin", "clap"] }
clap = { version = "4.3.10", features = ["derive"] }
ctor = "0.2"
env_logger = "0.11.3"
log = "0.4.21"
num-bigint = "0.4"
num-traits = "0.2.19"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sonic-rs = "0.3.17"
starknet-crypto = "=0.8.1"
starknet-ff = "0.3.7"
starknet-types-core = "=0.2.0"
stwo_cairo_utils = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "25c2f8a3de6b0495ea9136293a9f8d4cd16f85cb" }
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "25c2f8a3de6b0495ea9136293a9f8d4cd16f85cb" }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "25c2f8a3de6b0495ea9136293a9f8d4cd16f85cb" }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "25c2f8a3de6b0495ea9136293a9f8d4cd16f85cb" }
tempfile = "3.10.1"
thiserror = "1.0.61"
thiserror-no-std = "2.0.2"
tracing = "0.1.40"
mockall = "0.13.1"
rstest = "0.21"

