[package]
name = "cairo_program_runner-exe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", rev = "10154c610924fa87b9229714ddc59390d2d8e8b7", features = [
    "extensive_hints",
    "mod_builtin",
    "clap",
] }
clap = { version = "4.3.10", features = ["derive"] }
num-traits = "0.2.19"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
starknet-crypto = "0.6.2"
starknet-types-core = "0.1.2"
tempfile = "3.10.1"
thiserror = "1.0.61"
thiserror-no-std = "2.0.2"
regex = "1.11.1"
num-bigint = "0.4"
cairo-program-runner ={ path = "../cairo-program-runner"}

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.19.0"

[[bin]]
name = "cairo_program_runner"
path = "src/main.rs"