[package]
name = "concat-aggregator"
version = "0.1.0"
edition = "2021"
description = "The source (Cairo) code of the dummy concat aggregator."

[features]
dump_source_files = []

[dependencies]
bincode.workspace = true
cairo-vm.workspace = true
cairo-lang-executable.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-execute-utils.workspace = true
clap.workspace = true
num-traits.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
thiserror-no-std.workspace = true
regex.workspace = true
num-bigint.workspace = true
walkdir = "2"
anyhow = "1.0"
cairo-compile-utils = { path = "../cairo-compile-utils"}

[build-dependencies]
serde_json.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.19.0"
