[package]
name = "run_and_prove"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode.workspace = true
cairo-vm.workspace = true
clap.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
tempfile.workspace = true
thiserror.workspace = true
thiserror-no-std.workspace = true
regex.workspace = true
num-bigint.workspace = true
cairo-program-runner-lib = { path = "../cairo-program-runner-lib"}
stwo-cairo-adapter.workspace = true
stwo_cairo_prover.workspace = true
stwo_cairo_utils.workspace = true
stwo-prover.workspace = true
tracing.workspace = true
sonic-rs = { version = "0.3.17" }
starknet-ff.workspace = true
cairo-air.workspace = true
stwo-cairo-serialize.workspace = true
log.workspace = true

[[bin]]
name = "run_and_prove"
