[package]
name = "stwo_run_and_prove"
version = "0.1.0"
edition = "2024"

[dependencies]
cairo-vm.workspace = true
clap.workspace = true
thiserror.workspace = true
cairo-program-runner-lib.workspace = true
stwo-cairo-adapter.workspace = true
stwo_cairo_prover.workspace = true
stwo_cairo_utils.workspace = true
stwo-cairo-serialize.workspace = true
cairo-air.workspace = true
serde.workspace = true
stwo-prover.workspace = true
sonic-rs.workspace = true
starknet-ff.workspace = true
