[package]
name = "stwo_run_and_prove"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
cairo-air.workspace = true
cairo-program-runner-lib.workspace = true
cairo-vm.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
sonic-rs.workspace = true
starknet-ff.workspace = true
stwo_cairo_prover.workspace = true
stwo_cairo_utils.workspace = true
stwo-cairo-adapter.workspace = true
stwo-cairo-serialize.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
ctor.workspace = true
mockall.workspace = true
rstest.workspace = true
tempfile.workspace = true
