[package]
name = "stwo_vm_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
log.workspace = true
num-traits.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
stwo_cairo_utils.workspace = true
stwo-cairo-adapter.workspace = true
